--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,9 @@
 use_frameworks!
 
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 target 'Swifty_Example' do
-  pod 'Swifty', :path => '../'
+  pod 'RyukieSwifty', :path => '../'
 
   target 'Swifty_Tests' do
     inherit! :search_paths
